[gd_scene load_steps=4 format=3 uid="uid://b1n7eyb15huom"]

[ext_resource type="Script" path="res://scripts/phisherMedium.gd" id="1_80x1p"]
[ext_resource type="Texture2D" uid="uid://cdhl1vj7qtpwj" path="res://assets/textures/hacker.png" id="2_snwvx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cl5t"]
size = Vector2(513.333, 506.667)

[node name="PhisherMedium" type="Area2D"]
scale = Vector2(0.2, 0.2)
collision_layer = 64
collision_mask = 261
script = ExtResource("1_80x1p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_snwvx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 32
position = Vector2(-3.33332, 6.66667)
shape = SubResource("RectangleShape2D_3cl5t")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(7.62939e-06, -420)
scale = Vector2(6, 6.33333)

[node name="Panel" type="Panel" parent="."]
offset_left = -260.0
offset_top = 145.0
offset_right = 252.0
offset_bottom = 255.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_top = -15.0
offset_right = 510.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 100
text = "football"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
